--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -63,6 +63,8 @@
 .sub-list {
   position: absolute;
   top: 100%;
+  /* To fix a bug that makes sublists that we don't hover over accidentally become visible.  */
+  z-index: -1;
   visibility: hidden;
   opacity: 0;
   min-width: 25rem;
@@ -72,19 +74,6 @@
   background-color: $color-white;
   padding: 2rem 0;
   transition: $transition--1;
-
-  &::before {
-    content: "";
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    transform: rotateZ(45deg) translateY(65%);
-    width: 1.4rem;
-    height: 1.4rem;
-    border-top: $border--1;
-    border-left: $border--1;
-    background-color: $color-white;
-  }
 
   &__item {
     /* To make the title of a sublist always has the hover effect when hover on any child of this sublist. */
@@ -103,6 +92,19 @@
     margin-bottom: 0.5rem;
     font-weight: 500;
   }
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: rotateZ(45deg) translateY(65%);
+    width: 1.4rem;
+    height: 1.4rem;
+    border-top: $border--1;
+    border-left: $border--1;
+    background-color: $color-white;
+  }
 }
 
 .sub-list--2 {
@@ -112,6 +114,7 @@
 
   & .sub-list {
     /* For sublist that has child sublists, those child sublists should be visible by default. */
+    z-index: initial;
     visibility: visible;
     opacity: 1;
     /* Overwrite styles that are applied in case of the default sublist that has no child sublists. */
